--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </li>
         <li>
         <label for="pattern1">Pattern de validación:</label><br>
-        <input type="text" id="pattern1" name="pattern1" pattern="[A-Za-z]{3,}" title="3 letras y dos números que sean 1 o 2 solamente"><br><br>
+        <input type="text" id="pattern1" name="pattern1" pattern="[A-Za-z]{3}[12]{2}" title="3 letras y dos números que sean 1 o 2 solamente"><br><br>
         </li>
         <li>
         <label for="pattern2">Pattern de validación:</label><br>
